[package]
name = "blased"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = { git = "https://github.com/http-rs/surf.git", branch = "main" }
http-client = "3.0.0"
thiserror = "1.0.20"
serde = { version = "1.0.115", features = ["derive"] }
http-types = "2.1.0"
serde_json = "1.0.57"
cookie = "0.14.2"

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
